# mocap_optitrack

./: CMakeLists.txt
config/: mocap.yaml
launch/: mocap.launch
